--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ body {
 }
 
 .envelope-inner {
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     position: relative;
     transform-style: preserve-3d;
     transition: transform 1s;
@@ -37,25 +37,45 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 .envelope-front {
-    background-color: #f7b7a3;
+    background-color: #f7b7a3; /* Color del frente de la carta */
     color: #fff;
     text-align: center;
-    font-size: 20px;
+    padding: 20px;
+    position: relative;
+}
+
+.front-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.front-image {
+    width: 50px;  /* Tamaño de la imagen */
+    height: 50px; /* Tamaño de la imagen */
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .envelope-back {
-    background-color: #ffcccc;
+    background-color: #ffcccc; /* Color del reverso */
     color: #333;
     transform: rotateY(180deg);
-    padding: 20px;
+    padding: 30px;
     text-align: center;
+    width: auto;
+    height: auto;
 }
 
 .letter p {
     margin: 10px 0;
     font-size: 18px;
+    line-height: 1.6;
+    text-align: left;
 }
+
