--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,11 @@ body {
 .button-no:hover {
     background-color: #e53935;
 }
+
+.back-image {
+    margin-top: 20px; /* Espacio entre los botones y la imagen */
+    width: 80%; /* Ajusta el tamaño de la imagen según lo necesites */
+    max-width: 250px; /* Limita el tamaño máximo de la imagen */
+    height: auto; /* Mantiene la proporción original de la imagen */
+}
+
