--- a/styles.css
+++ b/styles.css
@@ -102,8 +102,9 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease; /* Agregar transición */
 }
+
 
 .button-yes {
     background-color: #4CAF50; /* Verde */
