--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
 }
 
 .popup {
-    display: none; /* Se oculta al inicio */
+    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -148,8 +148,9 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
     z-index: 1000;
 }
 
@@ -164,10 +165,11 @@ body {
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; /* Centra todos los elementos internos */
     justify-content: center;
     position: relative;
 }
+
 
 
 
