--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ body {
 }
 
 .popup {
-    display: none;
+    display: none; /* Se oculta al inicio */
     position: fixed;
     top: 50%;
     left: 50%;
@@ -148,15 +148,14 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    align-items: center; /* Centra verticalmente */
+    justify-content: center;
+    align-items: center;
     z-index: 1000;
 }
 
 .popup-content {
     background-color: white;
-    padding: 30px;
+    padding: 60px;
     border-radius: 10px;
     font-size: 20px;
     text-align: center;
